# Lead-Market-Insights

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  HITL_PIPELINE.md  README.md  config.py  config_example.py  config_template.py  docker-compose.yml  email_agent.py  email_templates.md  event_log_manager.py  example_usage.py  init_repo_structure.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  startup_check.py  test.txt  test_basic_workflow.py  workflow_log_manager.py
.github/: PULL_REQUEST_TEMPLATE.md
ARCHIVE/: Readme.md  main_20251001_1859.py  master_workflow_agent_20251001_1338.py  polling_trigger.py  telemetry_20251001_1343.py  test_polling_trigger.py  workflow_orchestrator_20251001_1340.py
adapters/: email_smtp.py
agents/: README.md  __init__.py  alert_agent.py  crm_agent.py  dossier_research_agent.py  email_agent.py  event_polling_agent.py  extraction_agent.py  factory.py  hitl_decision_evaluator.py  human_in_loop_agent.py  inbox_agent.py  inbox_poller.py  int_lvl_1_agent.py  internal_research_agent.py  local_storage_agent.py  master_workflow_agent.py  postgres_storage_agent.py  s3_storage_agent.py  soft_trigger_validator.py  trigger_detection_agent.py  workflow_orchestrator.py
aiosmtplib/: __init__.py
config/: README.md  company_domains.yaml  config.py  research-template.txt  synonym-trigger-template.txt  synonym-trigger.txt  trigger_words.txt  watcher.py
docs/: HITL_IMAP_INTEGRATION_NOTES_20251009.txt  architecture.md  compliance.md  hitl_flow.md  (+7 more)
(+212 files in other folders)
