[project]
name = "lead-market-insights"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1,<2", "watchdog>=3,<4",
  "google-api-python-client>=2,<3","google-auth>=2.33,<3","google-auth-oauthlib>=1,<2",
  "email-validator>=2,<3",
  "requests>=2.31,<3","httpx>=0.27,<1",
  "aiosmtplib>=2,<3","tenacity>=9,<10",
  "opentelemetry-api>=1.24,<2","opentelemetry-sdk>=1.24,<2","opentelemetry-exporter-otlp>=1.24,<2",
  "reportlab>=3.6,<4",
  "schedule>=1.2,<2","APScheduler>=3.10,<4"
]

[project.scripts]
leadmi = "main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
