[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "opentelemetry-api==1.27.0",
  "opentelemetry-sdk==1.27.0",
  "opentelemetry-exporter-otlp==1.27.0",
]

[tool.pytest.ini_options]
addopts = "--cov=agents --cov=utils --cov=config --cov-report=xml --cov-report=term --cov-fail-under=50"