[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "anyio",
  "opentelemetry-api==1.27.0",
  "opentelemetry-sdk==1.27.0",
  "opentelemetry-exporter-otlp==1.27.0",
]

[tool.pytest.ini_options]
# Temporär abgesenkter Wert, später hochratcheln (50 -> 60 -> 70 -> 80 -> 85)
addopts = "--cov=agents --cov=utils --cov=config --cov-report=xml --cov-report=term --cov-append --cov-fail-under=50"